# so2023-ricardo_aguiar

./: AUTHORS  README.md
activity_01/: Makefile  README.md  bootloader.S  hw-c.c  hw-c.ld  hw-c_rt0.c  hw-c_utils.c  hw.c  hw.hex  stdio.h
activity_01/tools/: Makefile  Makefile.am  Makefile.in  Makegyver.mk  bin2hex  bin2hex.c  bintools.m4  cpimg  cpimg.c  docm4.am  docm4.m4  export.ac  export.am  export.asm  hex2bin  newfile  newfile.Makefile  newfile.Makefile.m4  newfile.README.m4  newfile.c  stripcomment  syseg-export  syseg.c  syseg.h
activity_01/tools/.deps/: bin2hex.Po  cpimg-cpimg.Po  hex2bin.Po  stripcomment-funct.Po  stripcomment.Po  syseg.Plo
activity_01/tools/.libs/: libsyseg.lai
